Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61170

QtWebengine fails to build with -no-pepper-plugins

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.1
    • 5.9.0
    • WebEngine
    • None
    • Windows, MSVC2015

    Description

      On line 207 in qt5\qtwebengine\src\3rdparty\chromium\content\child\font_warmup_win.cc there is a reference to ppapi::ProxyAutoLock lock; which should presumably be under some kind of #ifdef. Commenting out the line seems to work OK.

      Attachments

        For Gerrit Dashboard: QTBUG-61170
        # Subject Branch Project Status CR V

        Activity

          People

            allan.jensen Allan Sandfeld Jensen
            patstew Patrick Stewart
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes