Fix windows builds with plugins disabled

The windows fonts warmup was using a PPAPI locks.

Task-number: QTBUG-61170
Change-Id: If8370667091ead3c5b96f2661796892395fdd76b
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>