chromium/content/child/font_warmup_win.cc
@@ -22,7 +22,9 @@
 #include "base/trace_event/trace_event.h"
 #include "base/win/iat_patch_function.h"
 #include "base/win/windows_version.h"
+#if defined(ENABLE_PLUGINS)
 #include "ppapi/shared_impl/proxy_lock.h"
+#endif
 #include "skia/ext/fontmgr_default_win.h"
 #include "third_party/skia/include/core/SkRefCnt.h"
 #include "third_party/skia/include/ports/SkFontMgr.h"
@@ -204,7 +206,9 @@ sk_sp<SkTypeface> GetTypefaceFromLOGFONT(const LOGFONTW* log_font) {
                                        : SkFontStyle::kUpright_Slant);
 
   std::string family_name = base::WideToUTF8(log_font->lfFaceName);
+#if defined(ENABLE_PLUGINS)
   ppapi::ProxyAutoLock lock;  // Needed for DirectWrite font proxy.
+#endif
   return sk_sp<SkTypeface>(
       g_warmup_fontmgr->matchFamilyStyle(family_name.c_str(), style));
 }
